--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=إدارة إدخالات المقاطع
 action.SIMULATE_SEGMENTS_ENTRIES=محاكات إدخالات المقاطع
 anonymous-user-segments-cache-expiration-time-description=حدد الوقت، بالثواني، الذي يتم فيه مسح ذاكرة التخزين المؤقت للمقاطع المجهولة.
 anonymous-user-segments-cache-expiration-time-name=وقت انتهاء صلاحية ذاكرة التخزين المؤقت لمقاطع المستخدم المجهولة
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=الشروط
 conditions-match=الشروط متطابقة
 content-recommendation=توصية المحتوى (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=لا يحتوي على
 not-equals=لا يساوي
 preview-members=معاينة الأعضاء
 review-and-run-test=مراجعة وتشغيل اختبار (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=اسم المقطع مطلوب.
 segmentation-enabled-description=عطّل هذا الخيار لمنع تجزئة المستخدم في كل طلب.
 segmentation-enabled-name=المقاطع ممكّنة
@@ -99,6 +102,7 @@ segments=الأجزاء
 segments-asah-connector-configuration-name=سحابة تحليلات الأجزاء
 segments-service-configuration-name=خدمة المقاطع
 select-experience=اختر التجربة (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=سحابة التحليلات
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=اسم اختبار A/B مطلوب. (Automatic Translation
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=يتعذر حذف المقطع لأنه مطلوب بواسطة إحدى الخبرات أو أكثر.
 the-segment-could-not-be-found=تعذر العثور على التجزئة.
 there-are-no-segments=لا توجد أجزاء.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=مقطع بدون عنوان
 user-segment=مقطع المستخدم
 variant-control=Control (Automatic Copy)
