--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Gestiona les entrades de fragments
 action.SIMULATE_SEGMENTS_ENTRIES=Simula les entrades de fragments
 anonymous-user-segments-cache-expiration-time-description=Defineix el temps, en segons, que triga la memòria cau del segment anònim a esborrar-se.
 anonymous-user-segments-cache-expiration-time-name=Hora de caducitat de la memòria cau dels segments anònims d'usuari
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Condicions
 conditions-match=Les condicions coincideixen
 content-recommendation=Recomanació de contingut
@@ -92,6 +94,7 @@ not-contains=No conté
 not-equals=No iguals
 preview-members=Previsualitza els membres
 review-and-run-test=Revisa i executa la prova
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Es requereix el nom del segment.
 segmentation-enabled-description=Desactiveu aquesta opció per evitar la segmentació d'usuaris a cada sol·licitud.
 segmentation-enabled-name=S'ha habilitat la segmentació
@@ -99,6 +102,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Analytics Cloud de segments
 segments-service-configuration-name=Servei dels segments
 select-experience=Seleccioneu l'experiència
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=Es requereix un nom de prova A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=El segment no es pot suprimir perquè és requerit per una o més experiències.
 the-segment-could-not-be-found=No s'ha trobat el segment.
 there-are-no-segments=No hi ha cap segment.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment sense títol
 user-segment=Segment d'usuari
 variant-control=Control (Automatic Copy)
