--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Διαχειριστείτε καταχωρήσε
 action.SIMULATE_SEGMENTS_ENTRIES=Προσομοίωση τμήματα καταχωρήσεις (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Ορίστε την ώρα, σε δευτερόλεπτα, στην οποία είναι απενεργοποιημένο το ανώνυμο cache του τμήματος. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Χρόνος λήξης cache τμημάτων ανώνυμων χρηστών (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Προϋποθέσεις (Automatic Translation)
 conditions-match=Συνθήκες αγώνα (Automatic Translation)
 content-recommendation=Σύσταση περιεχομένου (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Δεν περιέχει (Automatic Translation)
 not-equals=Δεν ισούται με (Automatic Translation)
 preview-members=Μέλη του προγράμματος προεπισκόπηση (Automatic Translation)
 review-and-run-test=Έλεγχος και εκτέλεση δοκιμής (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Το τμήμα όνομα είναι υποχρεωτικό. (Automatic Translation)
 segmentation-enabled-description=Απενεργοποιήστε αυτήν την επιλογή για να αποτρέψετε την κατάτμηση χρήστη σε κάθε αίτηση. (Automatic Translation)
 segmentation-enabled-name=Ενεργοποίηση τμηματοποίησης (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Τμήματα (Automatic Translation)
 segments-asah-connector-configuration-name=Τμήματα ανάλυσης υπολογιστικού νέφους (Automatic Translation)
 segments-service-configuration-name=Τμήματα εξυπηρέτησης (Automatic Translation)
 select-experience=Επιλέξτε εμπειρία (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics σύννεφο (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Απαιτείται όνομα δοκιμής A/B. (Autom
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Το τμήμα δεν μπορεί να διαγραφεί, επειδή είναι που απαιτούνται από μία ή περισσότερες εμπειρίες. (Automatic Translation)
 the-segment-could-not-be-found=Το τμήμα δεν θα μπορούσε να βρεθεί. (Automatic Translation)
 there-are-no-segments=Υπάρχουν καμία τμήματα. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Τμήμα χωρίς τίτλο (Automatic Translation)
 user-segment=Τμήμα χρηστών (Automatic Translation)
 variant-control=Control (Automatic Copy)
