--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Korraldavad segmentide (Automatic Translation)
 action.SIMULATE_SEGMENTS_ENTRIES=Simuleerida segmentide kanded (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Määratlege aeg sekundites, kus anonüümse segmendi vahemälu tühjendatakse. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonüümse kasutaja segmentide vahemälu aegumisaeg (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Tingimused (Automatic Translation)
 conditions-match=Võistluse tingimused (Automatic Translation)
 content-recommendation=Sisu soovitus (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Ole sisaldab (Automatic Translation)
 not-equals=Ei võrdu (Automatic Translation)
 preview-members=Eelvaade liikmed (Automatic Translation)
 review-and-run-test=Ülevaatuskatse ja Käivita test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segmendi nimi on nõutav. (Automatic Translation)
 segmentation-enabled-description=Keelake see suvand, et vältida kasutaja segmentimist iga taotluse. (Automatic Translation)
 segmentation-enabled-name=Segmentimine on lubatud (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmentide (Automatic Translation)
 segments-asah-connector-configuration-name=Segmentide analüüsi pilv (Automatic Translation)
 segments-service-configuration-name=Segmentide teenus (Automatic Translation)
 select-experience=Vali kogemus (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics pilve (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=A/B katse nimi on nõutav. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segmendi ei saa kustutada, kuna seda nõuab mõni kogemusi. (Automatic Translation)
 the-segment-could-not-be-found=Segmendi ei leitud. (Automatic Translation)
 there-are-no-segments=Seal on pole segmente. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Tiitlita segment (Automatic Translation)
 user-segment=Kasutaja segmendi (Automatic Translation)
 variant-control=Control (Automatic Copy)
