--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Gérer les entrées des segments
 action.SIMULATE_SEGMENTS_ENTRIES=Simuler les entrées des segments
 anonymous-user-segments-cache-expiration-time-description=Définissez le temps, en secondes, pour l'effaçage du cache de segment anonyme.
 anonymous-user-segments-cache-expiration-time-name=Temps d'expiration du cache de segment d'utilisateur anonyme
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Conditions
 conditions-match=Correspondance des conditions
 content-recommendation=Recommandation de contenu
@@ -92,6 +94,7 @@ not-contains=Ne contient pas
 not-equals=Différent de
 preview-members=Aperçu des membres
 review-and-run-test=Examen et exécuter le test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Le nom du segment est obligatoire.
 segmentation-enabled-description=Désactivez cette option pour empêcher la segmentation d'utilisateur à chaque demande.
 segmentation-enabled-name=Segmentation activée
@@ -99,6 +102,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Cloud des analyses de segments
 segments-service-configuration-name=Service des segments
 select-experience=Sélectionnez l'expérience (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Cloud analytique
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=Le nom du test A/B est requis. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Le segment ne peut être supprimé parce qu'il est obligatoire pour une ou plusieurs expériences.
 the-segment-could-not-be-found=Le segment est introuvable.
 there-are-no-segments=Il n'y a pas de segment.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment sans intitulé
 user-segment=Segment d'utilisateur
 variant-control=Control (Automatic Copy)
