--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Szegmens bejegyzések kezelése
 action.SIMULATE_SEGMENTS_ENTRIES=Szegmens bejegyzések szimulálása
 anonymous-user-segments-cache-expiration-time-description=Meghatározza az időt másodpercekben, amely elteltével a névtelen szegmens-gyorsítótár törlődik.
 anonymous-user-segments-cache-expiration-time-name=Névtelen felhasználói szegmens-gyorsítótár lejárati ideje
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Feltételek
 conditions-match=A feltételek megegyeznek
 content-recommendation=Tartalomajánlat
@@ -92,6 +94,7 @@ not-contains=Nem tartalmaz
 not-equals=Nem egyenlő
 preview-members=Tagok előnézete
 review-and-run-test=Felülvizsgálat és futási teszt
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=A szegmensnév kötelező.
 segmentation-enabled-description=Kapcsolja ki a lehetőséget, hogy megelőzze a felhasználó szegmentálását minden kérelemnél.
 segmentation-enabled-name=Szegmentálás engedélyezve
@@ -99,6 +102,7 @@ segments=Szegmensek
 segments-asah-connector-configuration-name=Szegmensek elemzési felhője
 segments-service-configuration-name=Szegmens szolgáltatás
 select-experience=Élmény kiválasztása
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics felhő
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B teszt neve kötelező. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=A szegmens nem törölhető, mert legalább egy élményhez szükséges.
 the-segment-could-not-be-found=A szegmens nem található.
 there-are-no-segments=Nincsenek szegmensek.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Felirat nélküli szegmens
 user-segment=Felhasználói szegmens
 variant-control=Control (Automatic Copy)
