--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Gestire le voci di segmenti (Automatic Translatio
 action.SIMULATE_SEGMENTS_ENTRIES=Simulare le voci di segmenti (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Definire il tempo, in secondi, in cui viene cancellata la cache dei segmenti anonimi. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Tempo di scadenza cache segmenti di utenti anonimiAnonymous User Segments Cache Expiration Time (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Condizioni (Automatic Translation)
 conditions-match=Corrispondenza di condizioni (Automatic Translation)
 content-recommendation=Raccomandazione sui contenuti (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Non contiene (Automatic Translation)
 not-equals=Non è uguale a (Automatic Translation)
 preview-members=Membri di anteprima (Automatic Translation)
 review-and-run-test=Revisione ed esecuzione dei test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Nome di un segmento è richiesto. (Automatic Translation)
 segmentation-enabled-description=Disattivare questa opzione per impedire la segmentazione degli utenti a ogni richiesta. (Automatic Translation)
 segmentation-enabled-name=Segmentazione abilitata (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmenti (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenti di analisi cloud (Automatic Translation)
 segments-service-configuration-name=Servizio di segmenti (Automatic Translation)
 select-experience=Seleziona esperienza (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analitica Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Il nome del test A/B è obbligatorio. (Automatic Translati
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Il segmento non può essere eliminato perché è richiesto da uno o più esperienze. (Automatic Translation)
 the-segment-could-not-be-found=Il segmento non è stato trovato. (Automatic Translation)
 there-are-no-segments=Non vi sono segmenti. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segmento senza titolo (Automatic Translation)
 user-segment=Segmento utente (Automatic Translation)
 variant-control=Control (Automatic Copy)
