--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ja.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=セグメントのエントリーを管理
 action.SIMULATE_SEGMENTS_ENTRIES=セグメントのエントリーをシミュレート
 anonymous-user-segments-cache-expiration-time-description=匿名セグメントのキャッシュがクリアされるまでの時間を秒単位で設定します。
 anonymous-user-segments-cache-expiration-time-name=匿名ユーザーセグメントキャッシュの有効時間
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=条件
 conditions-match=条件が一致
 content-recommendation=コンテンツ推薦
@@ -92,6 +94,7 @@ not-contains=以下を含まない
 not-equals=等しくない
 preview-members=メンバーをプレビュー
 review-and-run-test=テストをレビューして実行する
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=セグメント名は必須項目です。
 segmentation-enabled-description=このオプションを無効にすると、リクエストごとにユーザーがセグメント化されなくなります。
 segmentation-enabled-name=セグメンテーションが有効
@@ -99,6 +102,7 @@ segments=セグメント
 segments-asah-connector-configuration-name=セグメントアナリティクスクラウド
 segments-service-configuration-name=セグメントのサービス
 select-experience=エクスペリエンスを選択
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=アナリティクスクラウド
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required. (Automatic Copy)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=１つ以上のエクスペリエンスから利用されているので、セグメントは削除できません。
 the-segment-could-not-be-found=セグメントが見つかりませんでした。
 there-are-no-segments=セグメントがありません。
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=無題のセグメント
 user-segment=ユーザーセグメント
 variant-control=Control (Automatic Copy)
