--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Tvarko segmentai (Automatic Translation)
 action.SIMULATE_SEGMENTS_ENTRIES=Imituoti segmentų įrašai (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Nurodykite laiką sekundėmis, kuriuo išvaloma anoniminių segmentų talpykla. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anoniminių vartotojų segmentų talpyklos galiojimo laikas (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Sąlygos (Automatic Translation)
 conditions-match=Sąlygas rungtynės (Automatic Translation)
 content-recommendation=Turinio rekomendacija (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Ne yra (Automatic Translation)
 not-equals=Ne lygus (Automatic Translation)
 preview-members=Peržiūrėti narių (Automatic Translation)
 review-and-run-test=Peržiūrėti ir paleisti testas (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segmento pavadinimas yra būtinas. (Automatic Translation)
 segmentation-enabled-description=Išjunkite šią parinktį, kad kiekvienoje užklausoje nebūtų vartotojų segmentavimo. (Automatic Translation)
 segmentation-enabled-name=Segmentavimas įgalintas (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmentai (Automatic Translation)
 segments-asah-connector-configuration-name=Segmentai Analytics Cloud (Automatic Translation)
 segments-service-configuration-name=Segmentų paslaugos (Automatic Translation)
 select-experience=Pasirinkite "patirtis" (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud="Analytics" Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=A/B testo pavadinimas yra būtinas. (Automatic Translation
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segmento panaikinti negalima, nes tai yra reikalaujama pagal vieną ar daugiau patirties. (Automatic Translation)
 the-segment-could-not-be-found=Segmento nerasta. (Automatic Translation)
 there-are-no-segments=Šiuo metu nėra segmentus. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Be pavadinimo segmentas (Automatic Translation)
 user-segment=Vartotojų segmente (Automatic Translation)
 variant-control=Control (Automatic Copy)
