--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Segmentinvoer beheren
 action.SIMULATE_SEGMENTS_ENTRIES=Segmentinvoer simuleren
 anonymous-user-segments-cache-expiration-time-description=Definieer in seconden de tijd waarin de cache van het anonieme segment wordt gewist.
 anonymous-user-segments-cache-expiration-time-name=Vervaltijd cache anonieme gebruikerssegmenten
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Voorwaarden
 conditions-match=Voorwaarden stemmen overeen
 content-recommendation=Inhoudaanbeveling
@@ -92,6 +94,7 @@ not-contains=Bevat niet
 not-equals=Is niet gelijk aan
 preview-members=Voorbeeldweeergave leden bekijken
 review-and-run-test=Reviseren en test uitvoeren
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=De segmentnaam is verplicht.
 segmentation-enabled-description=Schakel deze optie uit om gebruikerssegmentatie bij elke aanvraag te voorkomen.
 segmentation-enabled-name=Segmentatie ingeschakeld
@@ -99,6 +102,7 @@ segments=Segmenten
 segments-asah-connector-configuration-name=Segmentanalysecloud
 segments-service-configuration-name=Segmentenservice
 select-experience=Ervaring selecteren
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analysecloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required. (Automatic Copy)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Het segment kan niet worden verwijderd omdat het vereist is door één of meer ervaringen.
 the-segment-could-not-be-found=Het segment werd niet gevonden.
 there-are-no-segments=Er zijn geen segmenten.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment zonder titel
 user-segment=Gebruikerssegment
 variant-control=Control (Automatic Copy)
