--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Gerenciar entradas de segmentos
 action.SIMULATE_SEGMENTS_ENTRIES=Simular entradas de segmentos
 anonymous-user-segments-cache-expiration-time-description=Define o tempo, em segundos, em que o cache de segmento anônimo é removido.
 anonymous-user-segments-cache-expiration-time-name=Tempo de expiração de cache dos segmentos anônimos do usuário
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Condições
 conditions-match=As Condições Correspondem
 content-recommendation=Recomendações de Conteúdo
@@ -92,6 +94,7 @@ not-contains=Não contém
 not-equals=Diferentes
 preview-members=Visualizar membros
 review-and-run-test=Analisar e executar teste
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=O nome do segmento é necessário.
 segmentation-enabled-description=Desativar esta opção para evitar a segmentação de usuário em cada solicitação.
 segmentation-enabled-name=Segmentação habilitada
@@ -99,6 +102,7 @@ segments=Segmentos
 segments-asah-connector-configuration-name=Nuvem de análise dos segmentos
 segments-service-configuration-name=Serviço de segmentos
 select-experience=Selecionar experiência
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Nuvem de análises
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=É necessário um nome de teste A/B. (Automatic Translatio
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=O segmento não pode ser excluído porque ele é requerido por um ou mais experiências.
 the-segment-could-not-be-found=O segmento não pode ser encontrado.
 there-are-no-segments=Não há nenhum segmento.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segmento sem título
 user-segment=Segmento do usuário
 variant-control=Control (Automatic Copy)
