--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_PT.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Manage Segments Entries (Automatic Copy)
 action.SIMULATE_SEGMENTS_ENTRIES=Simulate Segments Entries (Automatic Copy)
 anonymous-user-segments-cache-expiration-time-description=Define the time, in seconds, in which the anonymous segment cache is cleared. (Automatic Copy)
 anonymous-user-segments-cache-expiration-time-name=Anonymous User Segments Cache Expiration Time (Automatic Copy)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Conditions (Automatic Copy)
 conditions-match=Condições de partida (Automatic Translation)
 content-recommendation=Content Recommendation (Automatic Copy)
@@ -92,6 +94,7 @@ not-contains=Not Contains (Automatic Copy)
 not-equals=Not Equals (Automatic Copy)
 preview-members=Preview Members (Automatic Copy)
 review-and-run-test=Revisar e executar teste (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segment name is required. (Automatic Copy)
 segmentation-enabled-description=Disable this option to prevent user segmentation on every request. (Automatic Copy)
 segmentation-enabled-name=Segmentation Enabled (Automatic Copy)
@@ -99,6 +102,7 @@ segments=Segments (Automatic Copy)
 segments-asah-connector-configuration-name=Segments Analytics Cloud (Automatic Copy)
 segments-service-configuration-name=Segments Service (Automatic Copy)
 select-experience=Select Experience (Automatic Copy)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Copy)
 source.dxp=DXP (Automatic Copy)
@@ -107,6 +111,7 @@ test-name-is-required=É necessário um nome de teste A/B. (Automatic Translatio
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=The segment cannot be deleted because it is required by one or more experiences. (Automatic Copy)
 the-segment-could-not-be-found=The segment could not be found. (Automatic Copy)
 there-are-no-segments=There are no segments. (Automatic Copy)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Untitled Segment (Automatic Copy)
 user-segment=User Segment (Automatic Copy)
 variant-control=Control (Automatic Copy)
