--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Gestionarea intrărilor de segmente (Automatic Tr
 action.SIMULATE_SEGMENTS_ENTRIES=Simula intrărilor de segmente (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Definiți ora, în secunde, în care este șters memoria cache a segmentului anonim. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Timp de expirare pentru segmente de cache utilizator anonim (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Condiţiile (Automatic Translation)
 conditions-match=Condiţiile de meci (Automatic Translation)
 content-recommendation=Recomandare de conținut (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Nu conţine (Automatic Translation)
 not-equals=Nu este egal cu (Automatic Translation)
 preview-members=Previzualizare membri (Automatic Translation)
 review-and-run-test=Examinare și executare test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segmentul numele este necesar. (Automatic Translation)
 segmentation-enabled-description=Dezactivați această opțiune pentru a preveni segmentarea utilizatorilor la fiecare solicitare. (Automatic Translation)
 segmentation-enabled-name=Segmentare activată (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmente (Automatic Translation)
 segments-asah-connector-configuration-name=Segmente de analiză Cloud (Automatic Translation)
 segments-service-configuration-name=Serviciu de segmente (Automatic Translation)
 select-experience=Selectați experiență (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analiză Cloud (Automatic Translation)
 source.dxp=DELUXE (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Este necesar un nume de test a/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Imposibil de şters segment, deoarece acesta este cerut prin una sau mai multe experienţe. (Automatic Translation)
 the-segment-could-not-be-found=Imposibil de găsit segmentul. (Automatic Translation)
 there-are-no-segments=Nu există nici o segmente. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment fără titlu (Automatic Translation)
 user-segment=Utilizator Segment (Automatic Translation)
 variant-control=Control (Automatic Copy)
