--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Spravovať položky segmenty (Automatic Translati
 action.SIMULATE_SEGMENTS_ENTRIES=Simulovať segmenty položky (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Definujte čas v sekundách, v ktorom je vymazaná anonymná vyrovnávacia pamäť segmentu. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonymný používateľ segmenty cache vypršania času (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Podmienky (Automatic Translation)
 conditions-match=Podmienky zápas (Automatic Translation)
 content-recommendation=Odporúčanie pre obsah (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Nie obsahuje (Automatic Translation)
 not-equals=Nerovná sa (Automatic Translation)
 preview-members=Náhľad členov (Automatic Translation)
 review-and-run-test=Kontrola a spustenie testu (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Požaduje sa názov segmentu. (Automatic Translation)
 segmentation-enabled-description=Zakážte túto možnosť, aby ste zabránili segmentácii používateľov na každej požiadavke. (Automatic Translation)
 segmentation-enabled-name=Povolená segmentácia (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmenty (Automatic Translation)
 segments-asah-connector-configuration-name=Cloud služby Analytics pre segmenty (Automatic Translation)
 segments-service-configuration-name=Segmenty služby (Automatic Translation)
 select-experience=Vyberte možnosť skúsenosti (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Vyžaduje sa názov testu A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segment sa nedá odstrániť, pretože to vyžaduje jeden alebo viac skúseností. (Automatic Translation)
 the-segment-could-not-be-found=Segment sa nenašiel. (Automatic Translation)
 there-are-no-segments=Neexistujú žiadne úseky. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment bez názvu (Automatic Translation)
 user-segment=Segmentu používateľov (Automatic Translation)
 variant-control=Control (Automatic Copy)
