--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Upravljanje segmentov postavke (Automatic Transla
 action.SIMULATE_SEGMENTS_ENTRIES=Simulirati segmentov postavke (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Določite čas, v sekundah, v katerem se izbriše anonimni predpomnilnik segmenta. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Čas poteka predpomnilnika anonimnih uporabnikov (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Pogoji (Automatic Translation)
 conditions-match=Pogoji tekmo (Automatic Translation)
 content-recommendation=Priporočilo o vsebini (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Ne vsebuje (Automatic Translation)
 not-equals=Ni enako (Automatic Translation)
 preview-members=Predogled članov (Automatic Translation)
 review-and-run-test=Pregled in Run test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Vnesti je treba ime odseka. (Automatic Translation)
 segmentation-enabled-description=Onemogočite to možnost, da preprečite segmentacijo uporabnikov na vsaki zahtevi. (Automatic Translation)
 segmentation-enabled-name=Omogočeno segmentacijo (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmentov (Automatic Translation)
 segments-asah-connector-configuration-name=Google segmenti v oblaku (Automatic Translation)
 segments-service-configuration-name=Segmentih storitev (Automatic Translation)
 select-experience=Izberite izkušnje (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics oblak (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Zahtevano je preskusno ime A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segmenta ni mogoče izbrisati, ker to zahteva ena ali več izkušenj. (Automatic Translation)
 the-segment-could-not-be-found=Segmenta ni mogoče najti. (Automatic Translation)
 there-are-no-segments=Obstajajo ne segmente. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Neoznačeno segment (Automatic Translation)
 user-segment=Uporabniški Segment (Automatic Translation)
 variant-control=Control (Automatic Copy)
