--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Hantera segmentposter
 action.SIMULATE_SEGMENTS_ENTRIES=Simulera segmentposter
 anonymous-user-segments-cache-expiration-time-description=Ange tid, i sekunder, för när cache för anonymt segment rensas.
 anonymous-user-segments-cache-expiration-time-name=Förfallotid för cache för anonyma användarsegment
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Villkor
 conditions-match=Villkorsmatchning
 content-recommendation=Innehållsrekommendation
@@ -92,6 +94,7 @@ not-contains=Innehåller inte
 not-equals=Inte lika med
 preview-members=Förhandsvisa medlemmar
 review-and-run-test=Granska och kör test
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segmentnamn krävs.
 segmentation-enabled-description=Inaktivera det här alternativet för att hinda användarsegmentering i varje begäran.
 segmentation-enabled-name=Segmentering aktiverat
@@ -99,6 +102,7 @@ segments=Segment
 segments-asah-connector-configuration-name=Moln för segmentanalys
 segments-service-configuration-name=Segmenttjänst
 select-experience=Välj upplevelse
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analysmoln
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required. (Automatic Copy)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Det går inte att ta bort segmentet eftersom det krävs av en eller flera upplevelser.
 the-segment-could-not-be-found=Segmentet hittades inte.
 there-are-no-segments=Det finns inga segment.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Namnlöst segment
 user-segment=Användarsegment
 variant-control=Control (Automatic Copy)
