--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_uk.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Керувати сегменти записи (A
 action.SIMULATE_SEGMENTS_ENTRIES=Імітувати сегменти записи (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Визначте час, у секундах, в якому очищається анонімний кеш сегмента. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Час терміну дії кеша сегментів анонімних користувачів (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Умови (Automatic Translation)
 conditions-match=Умови матчу (Automatic Translation)
 content-recommendation=Рекомендація вмісту (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Не містить (Automatic Translation)
 not-equals=Не дорівнює (Automatic Translation)
 preview-members=Попередній перегляд членів (Automatic Translation)
 review-and-run-test=Огляд і запуск тесту (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Ім'я сегмента не потрібно. (Automatic Translation)
 segmentation-enabled-description=Вимкніть цей параметр, щоб запобігти сегментації користувачів за кожним запитом. (Automatic Translation)
 segmentation-enabled-name=Сегментація включена (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Сегменти (Automatic Translation)
 segments-asah-connector-configuration-name=Сегменти Analytics хмара (Automatic Translation)
 segments-service-configuration-name=Сегменти служби (Automatic Translation)
 select-experience=Виберіть досвід (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Аналітика хмара (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Потрібно вказати назву A/B. (Automatic
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Сегмент видалити не можна, тому що вона необхідна для одного або кількох досвідом. (Automatic Translation)
 the-segment-could-not-be-found=Сегмент не знайдено. (Automatic Translation)
 there-are-no-segments=Там не містить сегментів. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Сегмент без назви (Automatic Translation)
 user-segment=Користувач сегмент (Automatic Translation)
 variant-control=Control (Automatic Copy)
