--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_CN.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=管理细分条目
 action.SIMULATE_SEGMENTS_ENTRIES=模拟细分条目
 anonymous-user-segments-cache-expiration-time-description=以秒为单位定义时间，在此之后匿名细分缓存将清除。
 anonymous-user-segments-cache-expiration-time-name=匿名用户细分缓存到期时间
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=条件
 conditions-match=条件匹配
 content-recommendation=内容推荐
@@ -92,6 +94,7 @@ not-contains=不包含
 not-equals=不等于
 preview-members=预览成员
 review-and-run-test=检查并运行测试
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=细分名称为必填项。
 segmentation-enabled-description=禁用此选项以在每个请求上阻止用户细分。
 segmentation-enabled-name=已启用细分
@@ -99,6 +102,7 @@ segments=细分
 segments-asah-connector-configuration-name=细分分析云
 segments-service-configuration-name=细分服务
 select-experience=选择体验
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B 测试名称是必需的。 (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=无法删除该细分，因为一个或多个体验需要该细分。
 the-segment-could-not-be-found=无法找到此细分。
 there-are-no-segments=没有细分。
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=未命名的细分
 user-segment=用户细分
 variant-control=Control (Automatic Copy)
