--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=管理段項 (Automatic Translation)
 action.SIMULATE_SEGMENTS_ENTRIES=類比段條目 (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=定義清除匿名段緩存的時間(以秒為單位)。 (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=匿名使用者段緩存過期時間 (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=條件 (Automatic Translation)
 conditions-match=條件匹配 (Automatic Translation)
 content-recommendation=內容建議 (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=不包含 (Automatic Translation)
 not-equals=不等於 (Automatic Translation)
 preview-members=預覽會員 (Automatic Translation)
 review-and-run-test=查看和運行測試 (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=段名稱是必需的。 (Automatic Translation)
 segmentation-enabled-description=禁用此選項可防止每個請求的使用者分段。 (Automatic Translation)
 segmentation-enabled-name=已啟用分段 (Automatic Translation)
@@ -99,6 +102,7 @@ segments=段 (Automatic Translation)
 segments-asah-connector-configuration-name=細分分析雲 (Automatic Translation)
 segments-service-configuration-name=分段服務 (Automatic Translation)
 select-experience=選擇體驗 (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=分析雲 (Automatic Translation)
 source.dxp=dxp (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=A/B 測試名稱是必需的。 (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=無法刪除段, 因為它是一個或多個體驗所必需的。 (Automatic Translation)
 the-segment-could-not-be-found=找不到段。 (Automatic Translation)
 there-are-no-segments=沒有段。 (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=無標題段 (Automatic Translation)
 user-segment=使用者市場區隔 (Automatic Translation)
 variant-control=Control (Automatic Copy)
