--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Správa položek segmenty (Automatic Translation)
 action.SIMULATE_SEGMENTS_ENTRIES=Simulovat segmenty položek (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Definujte čas v sekundách, ve kterém bude mezipaměť anonymního segmentu vymazána. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Doba vypršení platnosti mezipaměti pro anonymní uživatele (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Podmínky (Automatic Translation)
 conditions-match=Podmínky zápasu (Automatic Translation)
 content-recommendation=Doporučení obsahu (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Není obsahuje (Automatic Translation)
 not-equals=Není rovno (Automatic Translation)
 preview-members=Náhled členů (Automatic Translation)
 review-and-run-test=Přezkoumat a spustit test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Je požadován název segmentu. (Automatic Translation)
 segmentation-enabled-description=Zakažte tuto možnost, chcete-li zabránit segmentaci uživatelů při každém požadavku. (Automatic Translation)
 segmentation-enabled-name=Segmentace povolena (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmenty (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenty shluku služby Analytics (Automatic Translation)
 segments-service-configuration-name=Segmenty služby (Automatic Translation)
 select-experience=Vybrat zkušenost (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Cloud služby Analytics (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Je požadován název testu a/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segment nelze odstranit, protože to vyžaduje jeden nebo více zážitků. (Automatic Translation)
 the-segment-could-not-be-found=Segment nelze nalézt. (Automatic Translation)
 there-are-no-segments=Neexistují žádné segmenty. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment bez názvu (Automatic Translation)
 user-segment=Uživatelský Segment (Automatic Translation)
 variant-control=Control (Automatic Copy)
