--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Segment-Einträge bearbeiten
 action.SIMULATE_SEGMENTS_ENTRIES=Segment-Einträge simulieren
 anonymous-user-segments-cache-expiration-time-description=Definieren Sie die Zeit in Sekunden, in der der anonyme Segment-Cache geleert wird.
 anonymous-user-segments-cache-expiration-time-name=Cache-Verfallszeit anonymer Benutzersegmente
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Bedingungen
 conditions-match=Bedingungen stimmen überein
 content-recommendation=Inhaltsempfehlung
@@ -92,6 +94,7 @@ not-contains=Enthält nicht
 not-equals=Nicht gleich
 preview-members=Mitglieder-Vorschau
 review-and-run-test=Überprüfung und Durchführung des Tests
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Der Segment-Name ist erforderlich.
 segmentation-enabled-description=Deaktivieren Sie diese Option, um eine Benutzersegmentierung bei jeder Anforderung zu verhindern.
 segmentation-enabled-name=Segmentierung aktiviert
@@ -99,6 +102,7 @@ segments=Segmente
 segments-asah-connector-configuration-name=Analytics-Cloud für Segmente
 segments-service-configuration-name=Segmente-Service
 select-experience=Erlebnis wählen
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics-Cloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required. (Automatic Copy)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Das Segment kann nicht gelöscht werden, da es von einem oder mehreren Erlebnissen benötigt wird.
 the-segment-could-not-be-found=Das Segment konnte nicht gefunden werden.
 there-are-no-segments=Es gibt keine Segmente.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Unbenanntes Segment
 user-segment=Benutzer-Segment
 variant-control=Control (Automatic Copy)
