--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Administrar entradas de segmentos
 action.SIMULATE_SEGMENTS_ENTRIES=Simular entradas de segmentos
 anonymous-user-segments-cache-expiration-time-description=Defina el tiempo (en segundos) después del que se borrará la caché de segmentos anónimos.
 anonymous-user-segments-cache-expiration-time-name=Tiempo de expiración de caché de segmentos de usuarios anónimos
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Condiciones
 conditions-match=Las condiciones coinciden con
 content-recommendation=Recomendación de contenido
@@ -92,6 +94,7 @@ not-contains=No contiene
 not-equals=No es igual a
 preview-members=Previsualizar miembros
 review-and-run-test=Revisar y ejecutar la prueba
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=El nombre del segmento es obligatorio.
 segmentation-enabled-description=Deshabilite esta opción para impedir la segmentación de usuarios en todas las peticiones.
 segmentation-enabled-name=Segmentación habilitada
@@ -99,6 +102,7 @@ segments=Segmentos
 segments-asah-connector-configuration-name=Nube de análisis de segmentos
 segments-service-configuration-name=Servicio de segmentos
 select-experience=Seleccionar experiencia
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=Se requiere el nombre de la prueba A/B. (Automatic Transla
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=No se puede eliminar el segmento porque se necesita para una o más experiencias.
 the-segment-could-not-be-found=No se encuentra el segmento.
 there-are-no-segments=No hay segmentos.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segmento sin título
 user-segment=Segmento de usuarios
 variant-control=Control (Automatic Copy)
