--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=مدیریت بخش ها (Automatic Translation)
 action.SIMULATE_SEGMENTS_ENTRIES=شبیه سازی بخش های مطالب (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=تعریف زمان ، در ثانیه ، که در آن کش بخش ناشناس پاک شده است. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=کاربر ناشناس بخش کش زمان انقضا (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=شرایط (Automatic Translation)
 conditions-match=شرایط مسابقه (Automatic Translation)
 content-recommendation=توصیه محتوا (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=شامل نیست (Automatic Translation)
 not-equals=برابر نیست
 preview-members=پیش نمایش اعضای (Automatic Translation)
 review-and-run-test=بررسی و اجرای آزمون (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=نام بخش مورد نیاز است. (Automatic Translation)
 segmentation-enabled-description=غیر فعال کردن این گزینه برای جلوگیری از تقسیم بندی کاربر در هر درخواست. (Automatic Translation)
 segmentation-enabled-name=قطعه بندی فعال شد (Automatic Translation)
@@ -99,6 +102,7 @@ segments=بخش ها
 segments-asah-connector-configuration-name=بخش تجزیه و تحلیل ابر (Automatic Translation)
 segments-service-configuration-name=بخش خدمات (Automatic Translation)
 select-experience=انتخاب تجربه (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=آنالیز ابر (Automatic Translation)
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B نام آزمون مورد نیاز است. (Automatic
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=بخش را نمی توان حذف کرد چون تجارب یک یا بیشتر مورد نیاز است. (Automatic Translation)
 the-segment-could-not-be-found=بخش یافت نشد. (Automatic Translation)
 there-are-no-segments=هیچ قطعه ای وجود دارد. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=بخش بدون عنوان (Automatic Translation)
 user-segment=بخش کاربر (Automatic Translation)
 variant-control=Control (Automatic Copy)
