--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Hallitse Segmenttimerkintöjä
 action.SIMULATE_SEGMENTS_ENTRIES=Simuloi Segmenttimerkintöjä
 anonymous-user-segments-cache-expiration-time-description=Määritä aika sekunteina, jonka kuluttua nimetön segmenttien välimuisti tyhjennetään.
 anonymous-user-segments-cache-expiration-time-name=Nimettömien Käyttäjäsegmenttien Välimuistin Vanhentumisaika
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Ehdot
 conditions-match=Ehdot Täsmäävät
 content-recommendation=Sisältösuositus
@@ -92,6 +94,7 @@ not-contains=Ei Sisällä
 not-equals=Eri Suuri
 preview-members=Esikatsele Jäseniä
 review-and-run-test=Katselmoi ja Aja Testi
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segmentin nimi on pakollinen.
 segmentation-enabled-description=Poista tämä valinta käytöstä estämään käyttäjäsegmentointi jokaisella pyynnöllä.
 segmentation-enabled-name=Segmentointi Käytössä
@@ -99,6 +102,7 @@ segments=Segmentit
 segments-asah-connector-configuration-name=Segmenttien Analytiikkapilvi
 segments-service-configuration-name=Segmenttien Palvelu
 select-experience=Valitse Kokemus
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics-pilvi
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required. (Automatic Copy)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segmenttiä ei voi poistaa, koska siihen on liitetty yksi tai useampi kokemus.
 the-segment-could-not-be-found=Segmenttiä ei löytynyt.
 there-are-no-segments=Segmenttejä ei ole.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Nimetön Segmentti
 user-segment=Käyttäjäsegmentti
 variant-control=Control (Automatic Copy)
