--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hi_IN.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=सेगमेंट प्रविष्टि
 action.SIMULATE_SEGMENTS_ENTRIES=सेगमेंट प्रविष्टियों का अनुकरण करना (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=समय, सेकंड में, जिसमें अनाम खंड कैश साफ़ किया गया है निर्धारित करें। (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=अनाम उपयोगकर्ता सेगमेंट कैश समय सीमा समाप्ति समय (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=शर्तों (Automatic Translation)
 conditions-match=शर्तें मिलान (Automatic Translation)
 content-recommendation=सामग्री की सिफारिश (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=शामिल नहीं (Automatic Translation)
 not-equals=बराबर नहीं (Automatic Translation)
 preview-members=पूर्वावलोकन सदस्य (Automatic Translation)
 review-and-run-test=समीक्षा करें और टेस्ट चलाएँ (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=सेगमेंट का नाम आवश्यक है. (Automatic Translation)
 segmentation-enabled-description=प्रत्येक अनुरोध पर उपयोगकर्ता विभाजन को रोकने के लिए इस विकल्प को अक्षम करें। (Automatic Translation)
 segmentation-enabled-name=विभाजन सक्षम (Automatic Translation)
@@ -99,6 +102,7 @@ segments=क्षेत्रों (Automatic Translation)
 segments-asah-connector-configuration-name=सेगमेंट Analytics क्लाउड (Automatic Translation)
 segments-service-configuration-name=सेगमेंट सेवा (Automatic Translation)
 select-experience=अनुभव का चयन करें (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics क्लाउड (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=A/B परीक्षण नाम आवश्यक ह
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=खंड को हटाया नहीं जा सकता क्योंकि यह एक या अधिक अनुभवों द्वारा आवश्यक है । (Automatic Translation)
 the-segment-could-not-be-found=खंड नहीं मिल सका । (Automatic Translation)
 there-are-no-segments=कोई सेगमेंट नहीं हैं । (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=अनाम सेगमेंट (Automatic Translation)
 user-segment=उपयोगकर्ता खंड (Automatic Translation)
 variant-control=Control (Automatic Copy)
