--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Mengelola entri segmen (Automatic Translation)
 action.SIMULATE_SEGMENTS_ENTRIES=Mensimulasikan segmen entri (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Tentukan waktu, dalam detik, di mana tembolok segmen anonim dikosongkan. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Pengguna anonim cache segmen waktu kedaluwarsa (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Kondisi (Automatic Translation)
 conditions-match=Kondisi pertandingan (Automatic Translation)
 content-recommendation=Rekomendasi konten (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Tidak berisi (Automatic Translation)
 not-equals=Tidak sama (Automatic Translation)
 preview-members=Anggota Tinjauan (Automatic Translation)
 review-and-run-test=Tinjau dan jalankan uji (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Nama segmen diperlukan. (Automatic Translation)
 segmentation-enabled-description=Nonaktifkan opsi ini untuk mencegah segmentasi pengguna pada setiap permintaan. (Automatic Translation)
 segmentation-enabled-name=Segmentasi diaktifkan (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmen (Automatic Translation)
 segments-asah-connector-configuration-name=Segmen Cloud Analytics (Automatic Translation)
 segments-service-configuration-name=Segmen Layanan (Automatic Translation)
 select-experience=Pilih pengalaman (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics awan (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Diperlukan nama pengujian A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segmen tidak dapat dihapus karena dibutuhkan oleh satu atau lebih pengalaman. (Automatic Translation)
 the-segment-could-not-be-found=Segmen tidak dapat ditemukan. (Automatic Translation)
 there-are-no-segments=Ada tidak ada segmen. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Untitled segmen (Automatic Translation)
 user-segment=Segmen pengguna (Automatic Translation)
 variant-control=Control (Automatic Copy)
