--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=לנהל את ערכי מקטעים (Automatic Tr
 action.SIMULATE_SEGMENTS_ENTRIES=הדמיית מקטעי ערכי (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=הגדר את השעה, בשניות, שבה מטמון המקטע האנונימי מנוקה. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=זמן תפוגה של מקטעי משתמשים אנונימיים למטמון (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=תנאים (Automatic Translation)
 conditions-match=תנאי התאמה (Automatic Translation)
 content-recommendation=המלצת תוכן (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=לא מכיל (Automatic Translation)
 not-equals=לא שווה (Automatic Translation)
 preview-members=תצוגה מקדימה של חברים (Automatic Translation)
 review-and-run-test=סקור והפעל מבחן (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=דרוש שם קטע. (Automatic Translation)
 segmentation-enabled-description=בטל אפשרות זו כדי למנוע פילוח של משתמשים בכל בקשה. (Automatic Translation)
 segmentation-enabled-name=פילוח זמין (Automatic Translation)
@@ -99,6 +102,7 @@ segments=מקטעים (Automatic Translation)
 segments-asah-connector-configuration-name=מגזרים ניתוח ענן (Automatic Translation)
 segments-service-configuration-name=שירות מקטעים (Automatic Translation)
 select-experience=בחר ניסיון (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=ניתוח ענן (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=דרוש שם מבחן A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=אין אפשרות למחוק המקטע כי הוא נדרש על ידי חוויות אחד או יותר. (Automatic Translation)
 the-segment-could-not-be-found=לא היתה אפשרות למצוא את המקטע. (Automatic Translation)
 there-are-no-segments=ישנם קטעים אין. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=פלח ללא שם (Automatic Translation)
 user-segment=המשתמש פלח (Automatic Translation)
 variant-control=Control (Automatic Copy)
