--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=세그먼트 항목 관리 (Automatic Translation
 action.SIMULATE_SEGMENTS_ENTRIES=세그먼트 항목 시뮬레이션 (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=익명 세그먼트 캐시가 지워지는 시간을 초 단위로 정의합니다. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=익명 사용자 세그먼트 캐시 만료 시간 (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=조건 (Automatic Translation)
 conditions-match=조건 일치 (Automatic Translation)
 content-recommendation=콘텐츠 추천 (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=아닙니다 포함 (Automatic Translation)
 not-equals=같지 (Automatic Translation)
 preview-members=미리 보기 회원 (Automatic Translation)
 review-and-run-test=테스트 검토 및 실행 (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=세그먼트 이름이 필요 합니다. (Automatic Translation)
 segmentation-enabled-description=모든 요청에서 사용자 세분화를 방지하려면 이 옵션을 사용하지 않도록 설정합니다. (Automatic Translation)
 segmentation-enabled-name=세분화 사용 가능 (Automatic Translation)
@@ -99,6 +102,7 @@ segments=세그먼트 (Automatic Translation)
 segments-asah-connector-configuration-name=세그먼트 분석 클라우드 (Automatic Translation)
 segments-service-configuration-name=세그먼트 서비스 (Automatic Translation)
 select-experience=경험 선택 (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=분석 클라우드 (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=A/B 테스트 이름이 필요합니다. (Automatic Transl
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=세그먼트는 하나 이상의 경험 필요 하기 때문에 삭제할 수 없습니다. (Automatic Translation)
 the-segment-could-not-be-found=세그먼트를 찾을 수 없습니다. (Automatic Translation)
 there-are-no-segments=세그먼트가 있다. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=제목 없는 세그먼트 (Automatic Translation)
 user-segment=사용자 세그먼트 (Automatic Translation)
 variant-control=Control (Automatic Copy)
