--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Administrere segmenter oppføringer (Automatic Tr
 action.SIMULATE_SEGMENTS_ENTRIES=Simulere segmenter oppføringer (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Definer tiden, i sekunder, der den anonyme segment bufferen tømmes. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Utløpstid for anonyme bruker segmenter hurtigbuffer (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Betingelser (Automatic Translation)
 conditions-match=Betingelser Match (Automatic Translation)
 content-recommendation=Innhold anbefaling (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Ikke inneholder (Automatic Translation)
 not-equals=Ikke lik (Automatic Translation)
 preview-members=Forhåndsvisning medlemmer (Automatic Translation)
 review-and-run-test=Gå gjennom og Kjør test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segmentnavnet kreves. (Automatic Translation)
 segmentation-enabled-description=Deaktiver dette alternativet for å hindre bruker segmentering på hver forespørsel. (Automatic Translation)
 segmentation-enabled-name=Segmentering aktivert (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmenter (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenter Analytics Cloud (Automatic Translation)
 segments-service-configuration-name=Segmenter Service (Automatic Translation)
 select-experience=Velg opplevelse (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Navn på A/B-test kreves. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segmentet kan ikke slettes fordi det kreves av en eller flere opplevelser. (Automatic Translation)
 the-segment-could-not-be-found=Finner ikke segmentet. (Automatic Translation)
 there-are-no-segments=Det finnes ingen segmenter. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment uten navn (Automatic Translation)
 user-segment=Brukeren Segment (Automatic Translation)
 variant-control=Control (Automatic Copy)
