--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Zarządzanie wpisy segmentów (Automatic Translat
 action.SIMULATE_SEGMENTS_ENTRIES=Symulować segmentów wpisy (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Zdefiniuj czas (w sekundach), w którym pamięć podręczna segmentu anonimowego jest wyczyszczona. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonimowe segmenty użytkownika czas wygaśnięcia pamięci podręcznej (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Warunki (Automatic Translation)
 conditions-match=Warunki dopasowania (Automatic Translation)
 content-recommendation=Rekomendacja treści (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Nie zawiera (Automatic Translation)
 not-equals=Nie jest równe (Automatic Translation)
 preview-members=Członkowie podglądu (Automatic Translation)
 review-and-run-test=Przegląd i uruchom test (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Nazwa segmentu jest wymagane. (Automatic Translation)
 segmentation-enabled-description=Wyłącz tę opcję, aby zapobiec segmentacji użytkowników na każde żądanie. (Automatic Translation)
 segmentation-enabled-name=Segmentacja włączona (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmenty (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenty Analytics Cloud (Automatic Translation)
 segments-service-configuration-name=Służby segmentami (Automatic Translation)
 select-experience=Wybierz doświadczenie (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Wymagana jest nazwa testu A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Segment nie można usunąć, ponieważ jest to wymagane przez jeden lub więcej doświadczenia. (Automatic Translation)
 the-segment-could-not-be-found=Nie można odnaleźć segmentu. (Automatic Translation)
 there-are-no-segments=Istnieją żadne segmenty. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Segment bez tytułu (Automatic Translation)
 user-segment=Segmentu użytkownika (Automatic Translation)
 variant-control=Control (Automatic Copy)
