--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Segments Entries-களை நிர்வகி
 action.SIMULATE_SEGMENTS_ENTRIES=Simulate Segments Entries
 anonymous-user-segments-cache-expiration-time-description=Define the time, in seconds, in which the anonymous segment cache is cleared. (Automatic Copy)
 anonymous-user-segments-cache-expiration-time-name=Anonymous User Segments Cache Expiration Time (Automatic Copy)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=நிபந்தனைகள்
 conditions-match=Conditions Match
 content-recommendation=Content Recommendation (Automatic Copy)
@@ -92,6 +94,7 @@ not-contains=இல்லை
 not-equals=சமமாக இல்லை
 preview-members=உறுப்பினர்களை ப்ரிவியூ செய்
 review-and-run-test=Review and Run Test (Automatic Copy)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=செக்மெண்ட் பெயர் தேவைப்படுகிறது.
 segmentation-enabled-description=Disable this option to prevent user segmentation on every request. (Automatic Copy)
 segmentation-enabled-name=செக்மெண்டேஷன் இயக்கப்பட்டது
@@ -99,6 +102,7 @@ segments=பிரிவுகள்
 segments-asah-connector-configuration-name=Segments Analytics Cloud (Automatic Copy)
 segments-service-configuration-name=செக்மெண்ட்ஸ் சர்வீஸ்
 select-experience=Select Experience (Automatic Copy)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=அனலிட்டிக்ஸ் Cloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required. (Automatic Copy)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=ஒன்று அல்லது அதற்கு மேற்பட்ட அனுபவங்கள் தேவைப்படுவதால், செக்மெண்டை நீக்க முடியாது.
 the-segment-could-not-be-found=செக்மெண்டைக் கண்டறிய முடியவில்லை.
 there-are-no-segments=எந்த செக்மெண்ட்களும் இல்லை.
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Untitled Segment (Automatic Copy)
 user-segment=பயனர் பிரிவு
 variant-control=Control (Automatic Copy)
