--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Segmentleri girişlerini yönetmek (Automatic Tra
 action.SIMULATE_SEGMENTS_ENTRIES=Segmentleri girişleri simülasyonu (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Adsız segment önbelleğinin temizlendiği süreyi saniye cinsinden tanımlayın. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonim Kullanıcı segmentleri önbellek sona erme zamanı (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Koşullar (Automatic Translation)
 conditions-match=Koşullar maç (Automatic Translation)
 content-recommendation=İçerik önerisi (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Değil içerir (Automatic Translation)
 not-equals=Eşit değil (Automatic Translation)
 preview-members=Önizleme üyeler (Automatic Translation)
 review-and-run-test=Testi gözden geçir ve Çalıştır (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Segment adı gereklidir. (Automatic Translation)
 segmentation-enabled-description=Her isteğin Kullanıcı segmentasyonunu önlemek için bu seçeneği devre dışı bırakın. (Automatic Translation)
 segmentation-enabled-name=Segmentasyon etkin (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Segmentleri (Automatic Translation)
 segments-asah-connector-configuration-name=Segmentler Analytics bulutu (Automatic Translation)
 segments-service-configuration-name=Segmentlere hizmet (Automatic Translation)
 select-experience=Deneyim Seç (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics bulut (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=A/B test adı gereklidir. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Bir veya daha fazla deneyimleri ile gerekli olduğu segment silinemez. (Automatic Translation)
 the-segment-could-not-be-found=Segment-ebil değil bulunmak. (Automatic Translation)
 there-are-no-segments=Hiçbir kesimleri vardır. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Adsız segment (Automatic Translation)
 user-segment=Kullanıcı kesimi (Automatic Translation)
 variant-control=Control (Automatic Copy)
