--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Quản lý các phân đoạn mục (Automatic Tr
 action.SIMULATE_SEGMENTS_ENTRIES=Mô phỏng các phân đoạn mục (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=Xác định thời gian, trong vài giây, trong đó bộ nhớ cache phân đoạn ẩn danh bị xóa. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Ẩn danh người dùng phân đoạn cache hết hạn thời gian (Automatic Translation)
+bounce-rate=Bounce Rate (Automatic Copy)
+click=Click (Automatic Copy)
 conditions=Điều kiện (Automatic Translation)
 conditions-match=Phù hợp với điều kiện (Automatic Translation)
 content-recommendation=Nội dung khuyến nghị (Automatic Translation)
@@ -92,6 +94,7 @@ not-contains=Không chứa (Automatic Translation)
 not-equals=Không bằng (Automatic Translation)
 preview-members=Xem trước các thành viên (Automatic Translation)
 review-and-run-test=Đánh giá và chạy thử nghiệm (Automatic Translation)
+scroll-depth=Scroll Depth (Automatic Copy)
 segment-name-is-required=Phân khúc tên là cần thiết. (Automatic Translation)
 segmentation-enabled-description=Vô hiệu hoá tuỳ chọn này để ngăn chặn người dùng phân khúc trên mỗi yêu cầu. (Automatic Translation)
 segmentation-enabled-name=Segmentation kích hoạt (Automatic Translation)
@@ -99,6 +102,7 @@ segments=Phân đoạn (Automatic Translation)
 segments-asah-connector-configuration-name=Phân đoạn đám mây Analytics (Automatic Translation)
 segments-service-configuration-name=Dịch vụ phân đoạn (Automatic Translation)
 select-experience=Chọn trải nghiệm (Automatic Translation)
+select-goal=Select Goal (Automatic Copy)
 show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Phân tích đám mây (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
@@ -107,6 +111,7 @@ test-name-is-required=Yêu cầu tên thử A/B. (Automatic Translation)
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=Các phân đoạn không thể bị xoá vì nó là yêu cầu của một hoặc nhiều kinh nghiệm. (Automatic Translation)
 the-segment-could-not-be-found=Không tìm thấy các phân đoạn. (Automatic Translation)
 there-are-no-segments=Không có không phân đoạn. (Automatic Translation)
+time-on-page=Time On Page (Automatic Copy)
 untitled-segment=Phân đoạn chưa có tiêu đề (Automatic Translation)
 user-segment=Phân khúc người dùng (Automatic Translation)
 variant-control=Control (Automatic Copy)
